cambios realizados por jammy y paco

--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
 		ga('send', 'pageview');
 	</script>
 	
-<script type="application/ld+json">
-{
-  "@context" : "http://schema.org",
-  "@type" : "Event",
-  "name" : "Boda de Jammy & Paco",
-  "startDate" : "2014-10-11",
-  "location" : {
-    "@type" : "Place",
-    "name" : "Misa -  Iglesia sagrada familia",
-    "address" : {
-      "@type" : "PostalAddress",
-      "addressLocality" : "Mazatlán,Sinaloa",
-      "addressCountry" : "México"
-    }
-  },
-  "image" : "http://jammyvega.pacochavez.mx/img/boda-jammy-paco.png",
-  "description" : "Hola somos sus amigos Jammy y Paco. Queremos que nos acompañen a celebrar nuestra boda.",
-  "url" : "http://jammyvega.pacochavez.mx/"
-}
-</script>
+	<script type="application/ld+json">
+	{
+	  "@context" : "http://schema.org",
+	  "@type" : "Event",
+	  "name" : "Boda de Jammy & Paco",
+	  "startDate" : "2014-10-11",
+	  "location" : {
+	    "@type" : "Place",
+	    "name" : "Misa -  Iglesia sagrada familia",
+	    "address" : {
+	      "@type" : "PostalAddress",
+	      "addressLocality" : "Mazatlán,Sinaloa",
+	      "addressCountry" : "México"
+	    }
+	  },
+	  "image" : "http://jammyvega.pacochavez.mx/img/boda-jammy-paco.png",
+	  "description" : "Hola somos sus amigos Jammy y Paco. Queremos que nos acompañen a celebrar nuestra boda.",
+	  "url" : "http://jammyvega.pacochavez.mx/"
+	}
+	</script>
 </head>
 <body>
 	<header>
@@ -56,16 +56,16 @@
 			11-10-2014
 		</h4>	
 		<p>
-			Hola somos sus amigos <strong>Jammy y Paco</strong>. Queremos que nos acompañen a celebrar nuestra <strong>boda</strong>.
+			Hola somos <strong>Jammy y Paco</strong>, queremos que nos acompañes a celebrar nuestra <strong>boda</strong>.
 		</p>
-		<a class="boton" href="">Envianos buenos deseos</a>
+		<a class="boton" href="">Felicitanos aquí</a>
 	</header>
 	<section class="date">
-		<h2>Nuestgra boda sera en Mazatlán</h2>
+		<h2>Nuestra boda será en Mazatlán</h2>
 		<article class="Misa">
 			<i></i>
 			<h2>Misa</h2>
-			<p>Iglesia Sagrada Familia</p>
+			<p>Iglesia de la Sagrada Familia</p>
 			<p class="time">
 				14:00 horas
 			</p>
@@ -77,7 +77,7 @@
 			<i></i>
 			<h2>Recepción</h2>
 			<p>Sumbawa</p>
-			<p class="time">Por confirmar</p>
+			<p class="time">15:30-21:00 horas</p>
 			<div class="map">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d916.5266681446708!2d-106.445853!3d23.23920499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf2461a8661214ceb!2sValentino&#39;s+%26+the+Fiestaland+Complex!5e0!3m2!1sen!2s!4v1405360612682"></iframe>
 			</div>
@@ -86,37 +86,36 @@
 	<section class="vestimenta">
 		<h2>Vestimenta para nuestra boda</h2>
 		<article class="caballeros">
-			<h3>Sugerencia para chicos</h3>
+			<h3>Sugerencia para Chicos</h3>
 			<img src="img/vestimenta-caballero-boda-jammy-y-paco.png" alt="sugerencia de vestimenta para hombres boda de jammy y paco">
 			<p>
-				Usar guayabera o ropa de manta el chiste es que nos la pasemos bien y se sientan comodos
+				Si eres hombre te sugerimos llevar <em>guayabera</em>, ropa de <em>manta</em> o <em>lino</em> con colores claros, ya que el evento será de día y queremos que te sientas cómodo y fresco.
 			</p>
 		</article>
 		<article class="damas">
 			<h3>Sugerencia para Chicas</h3>
 			<img src="img/vestimenta-damas-boda-jammy-y-paco.png" alt="sugerencia de vestimenta para boda de jammy y paco">
 			<p>
-				Dice la novia que lleven colores claros  y que el blanco solo ella lo puede usar.
+				Si eres mujer dice la novia que lleven colores claros  y que el blanco solo ella lo puede usar <strong>O NO ENTRAN</strong>. Lo demás tú ya eres experta en moda y todo eso.
 			</p>
 		</article>
 		
 	</section>	
 	<section class="mesa_de_regalos">
-		<h2>Mesa de regalos</h2>
+		<h2>Déjanos tus buenos deseos</h2>
 		<article>
-			<h3>Mesa de regalos efectivo</h3>
+			<h3>Mesa de régalos</h3>
 			<p>
-				Agradecemos de todo corazón por regalarnos su precensia asi como sus generosas bendiciones en efectivo ya que nos
+				Agradecemos de todo corazón por regalarnos tu presencia así como tus generosas bendiciones en efectivo.
 			</p>
 		</article>
 		<article>
-			<h3>Enviar obsequio para los novios</h3>
+			<h3>Puedes enviarnos aquí tu Régalo</h3>
 			<div class="boton_paypal"></div>
-			
 		</article>
 	</section>	
 	<section>
-		<h2>Contacatanos</h2>
+		<h2>Si tienes alguna duda contactanos aquí</h2>
 		<a href="https://plus.google.com/113083473087716794501/" rel="publisher"></a>
 	</section>	
 </body>
