--- a/index.html
+++ b/index.html
@@ -63,60 +63,97 @@
 	<section class="date">
 		<h2>Nuestra boda será en Mazatlán</h2>
 		<article class="Misa">
-			<i></i>
-			<h2>Misa</h2>
-			<p>Iglesia de la Sagrada Familia</p>
-			<p class="time">
-				14:00 horas
-			</p>
+			<i class="icon-iglesia"></i>
+			<div>
+				<h2>Misa</h2>
+				<p>Iglesia de la Sagrada Familia</p>
+				<p class="time">
+					14:00 horas
+				</p>
+			</div>	
 			<div class="map">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.9239293572004!2d-106.4500693678833!3d23.245855085404575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xec199e5c5bfa59e8!2sSagrada+Familia!5e0!3m2!1sen!2s!4v1405360404040"></iframe>
 			</div>
 		</article>
 		<article class="recepcion">
-			<i></i>
-			<h2>Recepción</h2>
-			<p>Sumbawa</p>
-			<p class="time">15:30-21:00 horas</p>
+			<i class="icon-pastel"></i>
+			<div>
+				<h2>Recepción</h2>
+				<p>Sumbawa</p>
+				<p class="time">15:30-21:00 horas</p>
+			</div>
 			<div class="map">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d916.5266681446708!2d-106.445853!3d23.23920499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf2461a8661214ceb!2sValentino&#39;s+%26+the+Fiestaland+Complex!5e0!3m2!1sen!2s!4v1405360612682"></iframe>
 			</div>
 		</article>
 	</section>	
-	<section class="vestimenta">
+	<section class="vestimenta icon-triangulo">
 		<h2>Vestimenta para nuestra boda</h2>
 		<article class="caballeros">
 			<h3>Sugerencia para Chicos</h3>
-			<img src="img/vestimenta-caballero-boda-jammy-y-paco.png" alt="sugerencia de vestimenta para hombres boda de jammy y paco">
+			<div>
+				<img src="img/vestimenta-boda-jammy-y-paco.png" alt="sugerencia de vestimenta para hombres boda de jammy y paco">
+			</div>		
 			<p>
 				Si eres hombre te sugerimos llevar <em>guayabera</em>, ropa de <em>manta</em> o <em>lino</em> con colores claros, ya que el evento será de día y queremos que te sientas cómodo y fresco.
 			</p>
 		</article>
 		<article class="damas">
 			<h3>Sugerencia para Chicas</h3>
-			<img src="img/vestimenta-damas-boda-jammy-y-paco.png" alt="sugerencia de vestimenta para boda de jammy y paco">
+			<div>
+				<img src="img/vestimenta-boda-jammy-y-paco.png" alt="sugerencia de vestimenta para boda de jammy y paco">
+			</div>
 			<p>
 				Si eres mujer dice la novia que lleven colores claros  y que el blanco solo ella lo puede usar <strong>O NO ENTRAN</strong>. Lo demás tú ya eres experta en moda y todo eso.
 			</p>
 		</article>
-		
 	</section>	
 	<section class="mesa_de_regalos">
 		<h2>Déjanos tus buenos deseos</h2>
-		<article>
+		<article class="mesa">
+			<i class="colors-icon-cerdo"></i>
 			<h3>Mesa de régalos</h3>
 			<p>
 				Agradecemos de todo corazón por regalarnos tu presencia así como tus generosas bendiciones en efectivo.
 			</p>
 		</article>
-		<article>
+		<article class="envia_regalo">
 			<h3>Puedes enviarnos aquí tu Régalo</h3>
-			<div class="boton_paypal"></div>
+			<div class="boton-paypal">
+				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+					<input type="hidden" name="cmd" value="_s-xclick">
+					<input type="hidden" name="hosted_button_id" value="JAPBV5EYMXARA">
+					<input type="image" src="http://jammyvega.pacochavez.mx/css/style/boton.png" border="0" name="submit" alt="PayPal, la forma más segura y rápida de pagar en línea.">
+					<img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
+				</form>
+			</div>
 		</article>
 	</section>	
-	<section>
+	<section class="contacto icon-triangulo-bottom">
 		<h2>Si tienes alguna duda contactanos aquí</h2>
-		<a href="https://plus.google.com/113083473087716794501/" rel="publisher"></a>
+		<article class="phones icon-whatsapp">
+			<div>
+				<h4 class="name">Jammy</h4>
+				<p class="tel">622 145 3016</p>
+			</div>
+			<div>
+				<h4 class="name">Paco</h4>
+				<p class="tel">669 159 8618</p>
+			</div>
+
+
+		</article>
+		<article class="social-media">
+			<a href="https://facebook.com/bodajammyypaco">
+				<i class="icon-facebook"></i>
+			</a>
+			<a href="https://twitter.com/pacochavez">
+				<i class="icon-twitter"></i>
+			</a>
+			<a href="https://plus.google.com/113083473087716794501/" rel="publisher">
+				<i class="icon-google"></i>
+			</a>
+		</article>
 	</section>	
 </body>
 </html>
