cambios a las imaenes y responsive 2

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<p>
 			Hola somos <strong>Jammy y Paco</strong>, queremos que nos acompañes a celebrar nuestra <strong>boda</strong>.
 		</p>
-		<a class="boton" href="">Felicitanos aquí</a>
+		<!--<a class="boton" href="">Felicitanos aquí</a>-->
 	</header>
 	<section class="date">
 		<h2>Nuestra boda será en Mazatlán</h2>
